; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/kernel/extr_kgdb.c_kgdb_dabr_match.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/kernel/extr_kgdb.c_kgdb_dabr_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_regs = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pt_regs*)* @kgdb_dabr_match to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kgdb_dabr_match(%struct.pt_regs* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pt_regs*, align 8
  store %struct.pt_regs* %0, %struct.pt_regs** %3, align 8
  %4 = load %struct.pt_regs*, %struct.pt_regs** %3, align 8
  %5 = call i64 @user_mode(%struct.pt_regs* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %17

8:                                                ; preds = %1
  %9 = load %struct.pt_regs*, %struct.pt_regs** %3, align 8
  %10 = call i32 @TRAP(%struct.pt_regs* %9)
  %11 = call i32 @computeSignal(i32 %10)
  %12 = load %struct.pt_regs*, %struct.pt_regs** %3, align 8
  %13 = call i64 @kgdb_handle_exception(i32 0, i32 %11, i32 0, %struct.pt_regs* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %17

16:                                               ; preds = %8
  store i32 1, i32* %2, align 4
  br label %17

17:                                               ; preds = %16, %15, %7
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i64 @user_mode(%struct.pt_regs*) #1

declare dso_local i64 @kgdb_handle_exception(i32, i32, i32, %struct.pt_regs*) #1

declare dso_local i32 @computeSignal(i32) #1

declare dso_local i32 @TRAP(%struct.pt_regs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
